update api for resolve and convert
